--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -23,7 +24,8 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:build": "styleguidist build",
+    "sonar": "node sonar-project.js"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +59,7 @@
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
     "react-styleguidist": "^11.1.7",
+    "sonarqube-scanner": "^2.8.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
 }
