AF-235-AdminPortalRouting: Fix Sonar settings

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "test:noWatch":"npm run test -- --watchAll=false",
+    "test:coverage": "craco test --watchAll=false --coverage --testResultsProcessor jest-sonar-reporter",
     "eject": "react-scripts eject",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "jest-sonar-reporter": "^2.0.0",
     "postcss": "^7.0.36",
     "react-styleguidist": "^11.1.7",
     "sonarqube-scanner": "^2.8.1",
