--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.15.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "sweetalert2": "^11.1.5",
     "sweetalert2-react-content": "^4.1.1",
     "web-vitals": "^1.1.2",
