--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.5.0",
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
