--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "bootstrap-icons": "^1.5.0",
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
-    "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.15.3",
+    "react-query": "^3.25.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
